@@ -1,7 +1,7 @@
 /*
  * $Id$
  *
- * Copyright 2017 Allen D. Ball.  All rights reserved.
+ * Copyright 2017, 2018 Allen D. Ball.  All rights reserved.
  */
 package ball.databind;
 
@@ -10,6 +10,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.MapperFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import java.io.Serializable;
 
 /**
  * Abstract base class for bean implementations that wrap a
@@ -18,7 +19,8 @@ import com.fasterxml.jackson.databind.SerializationFeature;
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  * @version $Revision$
  */
-public abstract class JSONBean {
+public abstract class JSONBean implements Serializable {
+    private static final long serialVersionUID = 7361248610078338176L;
 
     /**
      * Unconfigured {@link ObjectMapper} available for implementing subclass
