@@ -1,3 +1,8 @@
+2018-03-03  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/ball/databind/JSONBean.java:
+	Implement Serializable.
+
 2017-10-18  Allen D. Ball  <ball@sol>
 
 	* src/main/java/ball/databind/PolymorphicTypeMap.java:
